--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,12 @@
 body {
-  padding-top: 60px;
+  /* padding-top: 60px; standard */
+  padding-top: 80px;
+}
+
+#question {
+  font-size: 50px;
+}
+
+#questionButton {
+  margin-top: 30px;
 }
