--- a/css/master.css
+++ b/css/master.css
@@ -20,3 +20,7 @@
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+#contributeQuestions {
+  color: #9a9a9a;
+}
